samples/_failures_safe/1761373995_a88c15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba1805f5.c: In function ‘main’:
./samples/SAFE/__tmp_ba1805f5.c:151:16: error: missing terminating " character
  151 |         printf("\
      |                ^~
./samples/SAFE/__tmp_ba1805f5.c:151:9: error: expected expression at end of input
  151 |         printf("\
      |         ^~~~~~
./samples/SAFE/__tmp_ba1805f5.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ba1805f5.c:151:9: error: expected declaration or statement at end of input
